[package]
name = "kvs"
version = "0.4.0"
authors = ["xxchan <xxchan@sjtu.edu.cn>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "~2.33.0"
failure = "0.1.6"
serde = {version ="1.0", features =["derive"]}
serde_json = "1.0"
sled = "0.30.3"
log = "0.4.8"
env_logger = "0.7.1"
tempfile = "3.0.7"
crossbeam = "0.7.1"
num_cpus = "1.12.0"
rayon = "1.3.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.1"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

#[[bench]]
#name = "engine_bench"
#harness = false

[[bench]]
name = "pool_bench"
harness = false

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`